styling of each object in searchresult.html

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -2,20 +2,18 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="row">
-        <div class="col-sm-12" ng-repeat="property in properties">
-          <div class="thumbnail col-sm-4 col-md-4 col-lg-4">
+        <div class="col-sm-12 resultRow" ng-repeat="property in properties">
+            <div class="thumbnail col-sm-4 col-md-4 col-lg-4">
 	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
       		<div class="col-sm-4 col-md-4 col-lg-4">
-
 				<p>{{property.base_post.title}}</p>
 			    <p>Pris: {{property.facts.asking_price}} kr</p>
 			    <p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
 			    <p>Yta: {{property.facts.area}} kvadratmeter</p>
 			</div>
 			<div class="col-sm-4 col-md-4 col-lg-4" ng-bind-html="property.base_post.excerpt">
-			</div>
-
+		    </div>
         </div>
       </div>
     </div>
