--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -12,20 +12,15 @@
 			    	<p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
 			    	<p>Yta: {{property.facts.area}} kvadratmeter</p>
 				  </div>
-				  <div class="col-sm-4 col-md-4 col-lg-4">
-				  	<p><!-- {{property.base_post.excerpt}} -->post.excerpt</p>
-				  </div>
+				  <div class="col-sm-4 col-md-4 col-lg-4" ng-bind-html="property.base_post.excerpt"></div>
         </div>
       </div>
     </div>
-    <div ng-controller="searchController" class="col-sm-4 other">
+    <div class="col-sm-4 other">
       <div class="col-sm-12 col-md-12 col-lg-12 filterbox">
 	  		<h3>Filtrera resultat</h3>
 		    <form role="form">
-			    <div class="textbox">
-			      <label>Prisintervall: </br><input type="text" value=""><input type="text" value=""></label>
-			    </div>
-			    <div class="textbox">
+		    	<div class="textbox">
 			      <label>Stad: </br><input type="text" value=""></label>
 			    </div>
 			    <div class="selectbox">
@@ -34,25 +29,16 @@
 				        	<option ng-repeat="item in items" value="{{item}}">{{item}}<option value="">Alla objekt</option>
 				      	</select>
 		      		</label>
-		      	</div>
-
-
-				<!--
-			    <div class="checkbox">
-			      <label><input type="checkbox" value=""></label>
-			    </div>
-			    <div class="checkbox">
-			      <label><input type="checkbox" value="">Option 4</label>
-			    </div>
-			    <div class="checkbox">
-			      <label><input type="checkbox" value="">Option 5</label>
-			    </div>
-			    <input type="submit" value="Submit"/> -->
-			  </form>
-			</div>
+		      	</div>		    	
+			    <div class="textbox">
+			      <label>Prisintervall: </br><input type="text" value=""><input type="text" value=""></label>
+			    </div>			    
+			    <input type="submit" value="Filtrera"/>
+			</form>
+		</div>
     </div>
   </div>
-</section>
+
 
   <!-- 
     here we output the html that we have told Angular to trust
