Changed input type to numeric

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -34,7 +34,7 @@
 		      		</label>
 		      	</div>		    	
 			    <div class="textbox">
-			      <label>Prisintervall: </br><input type="text" value=""><input type="text" value=""></label>
+			      <label>Prisintervall: </br><input type="number" value=""><input type="number" value=""></label>
 			    </div>			    
 			    <input type="submit" value="Filtrera"/>
 			</form>
