--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -17,6 +17,8 @@
 <!-- C/P navbar from Bootstrap components -->
 
 	<nav class="navbar navbar-default">
+
+
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -30,7 +32,7 @@
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	     <!-- <ul class="nav navbar-nav" ng-include="partialsDir+'/views/menu.html'"> -->
+		    <ul class="nav navbar-nav" ng-include="partialDir+'views/menuRecurse.html'">
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
