--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -14,11 +14,9 @@
 		</div>
 	</div>
 
-<!-- C/P navbar from Bootstrap components -->
+<!-- navbar from Bootstrap components -->
 
 	<nav class="navbar navbar-default">
-
-
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
