--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="row">
-        <div class="col-sm-12 resultRow" ng-repeat="property in properties">
+        <div class="col-sm-12 resultRow" ng-repeat="property in properties | filter:citySearch | type:property.facts.city">
             <div class="thumbnail col-sm-4 col-md-4 col-lg-4">
 	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
@@ -22,19 +22,18 @@
 	  		<h3>Filtrera resultat</h3>
 		    <form role="form">
 		    	<div class="textbox">
-			      <label>Stad: </br><input type="text" value=""></label>
+			      <label>Stad: </br><input type="text" value="" ng-model="citySearch.facts.city"></label>
 			    </div>
 			    <div class="selectbox">
-			    	<label>Bostadstyp: </br>
-					    <select ng-model="selectedItem">
-				        	<option ng-repeat="item in items" value="{{item}}">{{item}}<option value="">Alla objekt</option>
-				      	</select>
-		      		</label>
+			    	<label>Bostadstyp: </br></label>
+					<select ng-model="propFilters.propertyType">
+				        <option ng-options="type for type in propTypes"><option value="">Alla objekt</option>
+				    </select>
 		      	</div>		    	
 			    <div class="textbox">
-			      <label>Prisintervall: </br><input type="number" value=""><input type="number" value=""></label>
+			      <label>Prisintervall: </br><input type="number" value=""><p>till </p><input type="number" value=""></label>
 			    </div>			    
-			    <input type="submit" value="Filtrera"/>
+			    <button>Rensa alla filter</button>
 			</form>
 		</div>
     </div>
