--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="row">
-        <div class="col-sm-12 resultRow" ng-repeat="property in properties | filter:citySearch | type:property.facts.city">
+        <div class="col-sm-12 resultRow" ng-repeat="property in properties | filter:citySearch">
             <div class="thumbnail col-sm-4 col-md-4 col-lg-4">
 	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
@@ -25,10 +25,22 @@
 			      <label>Stad: </br><input type="text" value="" ng-model="citySearch.facts.city"></label>
 			    </div>
 			    <div class="selectbox">
-			    	<label>Bostadstyp: </br></label>
-					<select ng-model="propFilters.propertyType">
-				        <option ng-options="type for type in propTypes"><option value="">Alla objekt</option>
-				    </select>
+			    	<p>Bostadstyp:</p>
+			    		<label class="checkbox-inline">
+			    			<input type="checkbox" ng-model="propFilters.type.Apartment" value="1">Lägenhet
+			    		</label><br>
+			    		<label class="checkbox-inline">
+			    			<input type="checkbox" ng-model="propFilters.type.House" value="1">Hus
+			    		</label><br>
+			    		<label class="checkbox-inline">
+			    			<input type="checkbox" ng-model="propFilters.type.Farm" value="1">Gård
+			    		</label><br>
+			    		<label class="checkbox-inline">
+			    			<input type="checkbox" ng-model="propFilters.type.Plot" value="1">Tomt
+			    		</label>
+					<!-- <select ng-model="propFilters.propertyType" ng-options="type for type in propTypes">
+				        <option value="">Alla objekt</option>
+				    </select> -->
 		      	</div>		    	
 			    <div class="textbox">
 			      <label>Prisintervall: </br><input type="number" value=""><p>till </p><input type="number" value=""></label>
