working pictures in aboot

--- a/wp-content/themes/ngTheme-master/partials/views/about.html
+++ b/wp-content/themes/ngTheme-master/partials/views/about.html
@@ -1,16 +1,17 @@
 <section class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-12 col-lg-12">
-	  	<img class="about-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
+		<h2>{{pages[0].base_page.title}}</h2>
+	  	<img ng-src="{{pages[0].media[0].source}}" class="hundred-img img-responsive">
 	 	</div>
 	</div>
   	<div class="row">
-  		<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-  			<h3>{{pages[0].title}}</h3>
+  		<div class="col-sm-6 col-md-4 col-lg-4">
+  			
 		</div>
 	</div>
 	<div class="row">
-		<div clas="col-cs-8 col-sm-8 col-md-8 col-lg-8" ng-bind-html="pages[0].content">
+		<div clas="col-cs-8 col-sm-8 col-md-8 col-lg-8" ng-bind-html="pages[0].base_page.content">
 		</div>
 	</div>
   <!-- 
