fixat logosize + lite margin för logoarea

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,6 +1,6 @@
 <div class="container" ng-controller="headerController">
-	<div class="row">
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+	<div class="logoarea row">
+		<div class="logWrap col-xs-2 col-sm-2 col-md-2 col-lg-2">
 		<a href="" ng-click="goTo('/');"><img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-8 col-lg-10">
