Adding phpmailer startfiles

--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -34,7 +34,7 @@
 					                <div class="panel-heading">
 					                    <h2 class="panel-title">Kontakta oss!</h2>
 					                </div>
-					                <div ng-controller="ContactController" class="panel-body">
+					                <div ng-controller="contactController" class="panel-body">
 					                    <form ng-submit="submit(contactform)" name="contactform" method="post" action="" class="form-horizontal" role="form">
 					                        <div class="form-group" ng-class="{ 'has-error': contactform.inputName.$invalid && submitted }">
 					                            <label for="inputName" class="col-lg-2 control-label">Namn</label>
