--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -1,4 +1,4 @@
-	<div class="jumbotron footer">
+	<div class="jumbotron footer" ng-controller="footerController">
 	  <div class="container">
 		  <div class="row">
 		  	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
@@ -13,78 +13,10 @@
 		  		</p>
 		  	</div>
 		  	<div class="col-xs-12 col-md-8 col-lg-8">
-		  		<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+		  		<button type="button" class="btn btn-primary btn-lg" ng-click="modalShow()" data-target="#myModal">
 				  Kontakta oss!
 				</button>
-
-				<!-- Modal -->
-				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				  <div class="modal-dialog">
-				    <div class="modal-content">
-				      <div class="modal-header">
-				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				        <h4 class="modal-title" id="myModalLabel">Kontakta oss!</h4>
-				      </div>
-				      <div class="modal-body">
-				        
-
-				      	<div class="vertical-middle">
-					        <div class="container">
-					            <div class="panel panel-default">
-					                <div class="panel-heading">
-					                    <h2 class="panel-title">Kontakta oss!</h2>
-					                </div>
-					                <div ng-controller="contactController" class="panel-body">
-					                    <form ng-submit="submit(contactform)" name="contactform" method="post" action="" class="form-horizontal" role="form">
-					                        <div class="form-group" ng-class="{ 'has-error': contactform.inputName.$invalid && submitted }">
-					                            <label for="inputName" class="col-lg-2 control-label">Namn</label>
-					                            <div class="col-lg-10">
-					                                <input ng-model="formData.inputName" type="text" class="form-control" id="inputName" name="inputName" placeholder="Your Name" required>
-					                            </div>
-					                        </div>
-					                        <div class="form-group" ng-class="{ 'has-error': contactform.inputEmail.$invalid && submitted }">
-					                            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-					                            <div class="col-lg-10">
-					                                <input ng-model="formData.inputEmail" type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Your Email" required>
-					                            </div>
-					                        </div>
-					                        <div class="form-group" ng-class="{ 'has-error': contactform.inputSubject.$invalid && submitted }">
-					                            <label for="inputSubject" class="col-lg-2 control-label">Ämne</label>
-					                            <div class="col-lg-10">
-					                                <input ng-model="formData.inputSubject" type="text" class="form-control" id="inputSubject" name="inputSubject" placeholder="Subject Message" required>
-					                            </div>
-					                        </div>
-					                        <div class="form-group" ng-class="{ 'has-error': contactform.inputMessage.$invalid && submitted }">
-					                            <label for="inputMessage" class="col-lg-2 control-label">Meddelande</label>
-					                            <div class="col-lg-10">
-					                                <textarea ng-model="formData.inputMessage" class="form-control" rows="4" id="inputMessage" name="inputMessage" placeholder="Your message..." required></textarea>
-					                            </div>
-					                        </div>
-					                        <div class="form-group">
-					                            <div class="col-lg-offset-2 col-lg-10">
-					                                <button type="submit" class="btn btn-default" ng-disabled="submitButtonDisabled">
-
-					                                    Skicka Meddelande
-
-					                                </button>
-					                            </div>
-					                        </div>
-					                    </form>
-					                    <p ng-class="result" style="padding: 15px; margin: 0;">{{ resultMessage }}</p>
-					                </div>
-					            </div>
-					        </div>
-					    </div>
-				      </div>
-				      <div class="modal-footer">
-				        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				      </div>
-				    </div>
-				  </div>
-				</div>
 		  	</div>
-
-
 		  </div>
 		</div>
 	</div>
