--- a/wp-content/themes/ngTheme-master/partials/views/modal.html
+++ b/wp-content/themes/ngTheme-master/partials/views/modal.html
@@ -47,7 +47,7 @@
 							</div>
 						</div>
 					</form>
-					<p ng-class="result" style="padding: 15px; margin: 0;">{{ resultMessage }}</p>
+					<p ng-class="result">{{ resultMessage }}</p>
 				</div>
 			</div>
 	</div>
