--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -7,9 +7,9 @@
 		  	<div class="col-xs-12 col-md-4 col-lg-4">
 		  		<p>
 		  		Sellforce<br> 
-		  		Mjaumjau 24<br>
+		  		S:t Eriksgatan 24<br>
 		  		666 23 Malmö<br>
-		  		Tel 23 66 66<br>
+		  		Tel 040 - 23 66 66<br>
 		  		</p>
 		  	</div>
 		  	<div class="col-xs-12 col-md-8 col-lg-8">
