--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -4,7 +4,7 @@
 		  	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
 		  </div>
 		  <div class="row">
-		  	<div class="col-xs-12 col-md-4 col-lg-4">
+		  	<div class="col-xs-4 col-md-4 col-lg-4">
 		  		<p>
 		  		Sellforce<br> 
 		  		S:t Eriksgatan 24<br>
@@ -12,8 +12,8 @@
 		  		Tel 040 - 23 66 66<br>
 		  		</p>
 		  	</div>
-		  	<div class="col-xs-12 col-md-8 col-lg-8">
-		  		<button type="button" class="btn btn-primary btn-lg" ng-click="modalShow()" data-target="#myModal">
+		  	<div class="col-xs-8 col-md-8 col-lg-8">
+		  		<button type="button" class="btn btn-primary btn-lg" id="modalButton" ng-click="modalShow()" data-target="#myModal">
 				  Kontakta oss!
 				</button>
 		  	</div>
