commenting and fixing conflicts

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,3 +1,4 @@
+<!-- header content -->
 <div class="container" ng-controller="headerController">
 	<div class="logoarea row">
 		<div class="logWrap col-xs-10 col-sm-6 col-md-4 col-lg-2">
@@ -13,9 +14,7 @@
 			</div>
 		</div>
 	</div>
-
-<!-- navbar from Bootstrap components -->
-
+	<!-- navbar from Bootstrap components -->
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
@@ -27,7 +26,6 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	    </div>
-
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="navbar-collapse" ng-class="{true:'collapse', false:''}[isCollapsed]" id="bs-example-navbar-collapse-1">
 	    	<!-- begin menuRecurse -->
