--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -1,25 +1,26 @@
-	<div class="jumbotron footer" ng-controller="footerController">
-	  <div class="container">
-		  <div class="row">
-		  	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
-		  </div>
-		  <div class="row">
-		  	<div class="col-xs-4 col-md-4 col-lg-4">
-		  		<p>
-		  		Sellforce<br> 
-		  		S:t Eriksgatan 24<br>
-		  		666 23 Malmö<br>
-		  		Tel 040 - 23 66 66<br>
-		  		</p>
-		  	</div>
-		  	<div class="col-xs-8 col-md-8 col-lg-8">
-		  		<button type="button" class="btn btn-primary btn-lg" id="modalButton" ng-click="modalShow()" data-target="#myModal">
-				  Kontakta oss!
-				</button>
-		  	</div>
-		  </div>
-		</div>
+<!-- footer content -->
+<div class="jumbotron footer" ng-controller="footerController">
+  <div class="container">
+	  <div class="row">
+	  	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
+	  </div>
+	  <div class="row">
+	  	<div class="col-xs-12 col-md-4 col-lg-4">
+	  		<p>
+	  		Sellforce<br> 
+	  		S:t Eriksgatan 24<br>
+	  		666 23 Malmö<br>
+	  		Tel 040 - 23 66 66<br>
+	  		</p>
+	  	</div>
+	  	<div class="col-xs-12 col-md-8 col-lg-8">
+	  		<button type="button" class="btn btn-primary btn-lg" ng-click="modalShow()" data-target="#myModal">
+			  Kontakta oss!
+			</button>
+	  	</div>
+	  </div>
 	</div>
+</div>
 
 
 
