--- a/wp-content/themes/ngTheme-master/partials/views/about.html
+++ b/wp-content/themes/ngTheme-master/partials/views/about.html
@@ -1,3 +1,4 @@
+<!-- about the company, included in <main> -->
 <section class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-12 col-lg-12">
