--- a/wp-content/themes/ngTheme-master/partials/views/brokerwords.html
+++ b/wp-content/themes/ngTheme-master/partials/views/brokerwords.html
@@ -1,3 +1,4 @@
+<!-- text from one of the employed brokers -->
 <section class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-12 col-lg-12">
