--- a/wp-content/themes/ngTheme-master/partials/views/home.html
+++ b/wp-content/themes/ngTheme-master/partials/views/home.html
@@ -1,3 +1,4 @@
+<!-- main content at the start mode of the app -->
 <section class="container">
 	<div class="row">
 	  <div class="col-sm-6 col-md-4 col-lg-4">
