--- a/wp-content/themes/ngTheme-master/partials/views/modal.html
+++ b/wp-content/themes/ngTheme-master/partials/views/modal.html
@@ -1,11 +1,9 @@
-
+<!-- modal including contact form -->
 <div class="modal-header">
 	<button type="button" class="close" ng-click="cancel()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	<h4 class="modal-title" id="myModalLabel">Kontakta oss!</h4>
 </div>
 <div class="modal-body">
-
-
 	<div class="vertical-middle">
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -40,9 +38,7 @@
 						<div class="form-group">
 							<div class="col-lg-offset-2 col-lg-10">
 								<button type="submit" class="btn btn-default" ng-disabled="submitButtonDisabled">
-
-									Skicka Meddelande
-
+									Skicka meddelande
 								</button>
 							</div>
 						</div>
@@ -53,9 +49,5 @@
 	</div>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-warning" ng-click="cancel()">
-
-		Avbryt
-
-	</button>
+	<button class="btn btn-warning" ng-click="cancel()">Avbryt</button>
 </div>
