--- a/wp-content/themes/ngTheme-master/partials/views/page.html
+++ b/wp-content/themes/ngTheme-master/partials/views/page.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div clas="col-cs-8 col-sm-8 col-md-8 col-lg-8" ng-bind-html="pages[0].content">
+		<div class="col-cs-8 col-sm-8 col-md-8 col-lg-8" ng-bind-html="pages[0].content">
 		</div>
 	</div>
 </section>
