--- a/wp-content/themes/ngTheme-master/style.css
+++ b/wp-content/themes/ngTheme-master/style.css
@@ -6707,12 +6707,11 @@ footer,
 main:after {
   height: 142px;
 }
-footer {
-  background: #BBB;
-}
 
 footer .jumbotron {
+	padding-top: 0;
 	margin-bottom: 0;
+	background-color: #EEE;
 }
 
 footer #modalButton {
@@ -6723,6 +6722,31 @@ footer #modalButton {
 
 #footer-img {
 	width: 100%;
-	height: 100px;
+	height: 20px;
+}
 
+.ftrrow {
+	margin-top: 20px;
+
+}
+
+.ftrbutton {
+	border: none;
+  border-spacing: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 42px;
+  font-weight: 200;
+  line-height: 1.42rem;
+  list-style: none outside none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  text-decoration: none;
+  text-indent: 0;
+	color: white;
+	width: 100%;
+	height: 120px;
+	background-image: url('partials/img/coca.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
