changes from spegelmapp

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -2,7 +2,7 @@
 <div class="container" ng-controller="headerController">
 	<div class="logoarea row">
 		<div class="logWrap col-xs-10 col-sm-6 col-md-4 col-lg-2">
-		<a href="" ng-click="goTo('/');"><img id="logo" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
+		<a href="" ng-click="goTo('/');"><img id="logo" src="/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
 		<div class="col-xs-2 col-sm-6 col-md-8 col-lg-10">
 			<div class="pull-right" id="customSocialMediaLinks">
@@ -31,6 +31,7 @@
 	    	<!-- begin menuRecurse -->
 		    <ul class="nav navbar-nav" ng-include="partialDir+'views/menuRecurse.html'">
 	      </ul> <!-- end menuRecurse -->
+	      <button class="btn btn-default"><a href="https://sv.surveymonkey.com/s/NBGB8BT" target="_blank">Tyck till om våran sajt!</button>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>	
