--- a/wp-content/themes/ngTheme-master/partials/views/modal.html
+++ b/wp-content/themes/ngTheme-master/partials/views/modal.html
@@ -8,33 +8,33 @@
 
 	<div class="vertical-middle">
 			<div class="panel panel-default">
-				<div class="panel-heading">
+				<!-- <div class="panel-heading">
 					<h2 class="panel-title">Kontakta oss!</h2>
-				</div>
+				</div> -->
 				<div class="panel-body">
 					<form ng-submit="submit(contactform)" name="contactform" class="form-horizontal" role="form">
 						<div class="form-group" ng-class="{ 'has-error': contactform.inputName.$invalid && submitted }">
 							<label for="inputName" class="col-lg-2 control-label">Namn</label>
 							<div class="col-lg-10">
-								<input ng-model="formData.inputName" type="text" class="form-control" id="inputName" name="inputName" placeholder="Your Name" required>
+								<input ng-model="formData.inputName" type="text" class="form-control" id="inputName" name="inputName" placeholder="Ditt namn" required>
 							</div>
 						</div>
 						<div class="form-group" ng-class="{ 'has-error': contactform.inputEmail.$invalid && submitted }">
-							<label for="inputEmail" class="col-lg-2 control-label">Email</label>
+							<label for="inputEmail" class="col-lg-2 control-label">E-post</label>
 							<div class="col-lg-10">
-								<input ng-model="formData.inputEmail" type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Your Email" required>
+								<input ng-model="formData.inputEmail" type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Din email" required>
 							</div>
 						</div>
 						<div class="form-group" ng-class="{ 'has-error': contactform.inputSubject.$invalid && submitted }">
 							<label for="inputSubject" class="col-lg-2 control-label">Ämne</label>
 							<div class="col-lg-10">
-								<input ng-model="formData.inputSubject" type="text" class="form-control" id="inputSubject" name="inputSubject" placeholder="Subject Message" required>
+								<input ng-model="formData.inputSubject" type="text" class="form-control" id="inputSubject" name="inputSubject" placeholder="Ämne" required>
 							</div>
 						</div>
 						<div class="form-group" ng-class="{ 'has-error': contactform.inputMessage.$invalid && submitted }">
 							<label for="inputMessage" class="col-lg-2 control-label">Meddelande</label>
 							<div class="col-lg-10">
-								<textarea ng-model="formData.inputMessage" class="form-control" rows="4" id="inputMessage" name="inputMessage" placeholder="Your message..." required></textarea>
+								<textarea ng-model="formData.inputMessage" class="form-control" rows="4" id="inputMessage" name="inputMessage" placeholder="Ditt meddelande..." required></textarea>
 							</div>
 						</div>
 						<div class="form-group">
@@ -47,9 +47,9 @@
 							</div>
 						</div>
 					</form>
-					<p ng-class="result">{{ resultMessage }}</p>
 				</div>
 			</div>
+			<alert ng-show="alert.msg" type="{{alert.type}}" close="closeAlert()">{{alert.msg}}</alert>
 	</div>
 </div>
 <div class="modal-footer">
