adding city to each prop. in table in view

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -12,6 +12,7 @@
 			    <p>Pris: {{property.facts.asking_price}} kr</p>
 			    <p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
 			    <p>Yta: {{property.facts.area}} kvadratmeter</p>
+			    <p>Stad: {{property.facts.city}}</p>
 			</div>
 			<div class="col-sm-4 col-md-4 col-lg-4" ng-bind-html="property.base_post.excerpt">
 		    </div>
