--- a/wp-content/themes/ngTheme-master/style.css
+++ b/wp-content/themes/ngTheme-master/style.css
@@ -6645,6 +6645,9 @@ header {
 		display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+
   }
 
 	/* Object info below the jumbo */
