typeOfObject now in swedish in view + new DB-dump

--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -29,16 +29,16 @@
 			    <div class="selectbox">
 			    	<p>Bostadstyp:</p>
 			    		<label class="checkbox-inline">
-			    			<input type="checkbox" ng-model="propFilters.type.apartment" value="1">Lägenhet
+			    			<input type="checkbox" ng-model="propFilters.type['lägenhet']">Lägenhet
 			    		</label><br>
 			    		<label class="checkbox-inline">
-			    			<input type="checkbox" ng-model="propFilters.type.house" value="1">Hus
+			    			<input type="checkbox" ng-model="propFilters.type.hus">Hus
 			    		</label><br>
 			    		<label class="checkbox-inline">
-			    			<input type="checkbox" ng-model="propFilters.type.farm" value="1">Gård
+			    			<input type="checkbox" ng-model="propFilters.type['gård']">Gård
 			    		</label><br>
 			    		<label class="checkbox-inline">
-			    			<input type="checkbox" ng-model="propFilters.type.plot" value="1">Tomt
+			    			<input type="checkbox" ng-model="propFilters.type.tomt">Tomt
 			    		</label>
 		      	</div>		    	
 			    <div class="textbox">
