--- a/wp-content/themes/ngTheme-master/partials/footer.html
+++ b/wp-content/themes/ngTheme-master/partials/footer.html
@@ -3,18 +3,18 @@
 	<img id="footer-img" src="../wu14RIA1/wp-content/themes/ngTheme-master/partials/img/plasma.jpg">
   <div class="container">
 	  <div class="row ftrrow">
-	  	<div class="col-xs-4 col-md-4 col-lg-4">
+	  	<div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-8 col-md-push-4 col-lg-8 col-lg-push-4">
+	  		<button type="button" class="ftrbutton" ng-click="modalShow()" data-target="#myModal">
+			  Kontakta oss!
+			</button>
+	  	</div>
+	  	<div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-4 col-md-pull-8 col-lg-4 col-lg-pull-8">
 	  		<p>
 	  		Sellforce<br> 
 	  		S:t Knarkus gränd 24<br>
 	  		666 23 Malmö<br>
 	  		Tel 040 - 23 66 66<br>
 	  		</p>
-	  	</div>
-	  	<div class="col-xs-8 col-md-8 col-lg-8">
-	  		<button type="button" class="ftrbutton" ng-click="modalShow()" data-target="#myModal">
-			  Kontakta oss!
-			</button>
 	  	</div>
 	  </div>
 	</div>
