--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,16 +1,20 @@
 <!-- header content -->
-<div class="container" ng-controller="headerController">
+<div class="container-fluid" ng-controller="headerController">
 	<div class="logoarea row">
 		<div class="logWrap col-xs-10 col-sm-6 col-md-4 col-lg-2">
 		<a href="" ng-click="goTo('/');"><img id="logo" src="/wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
 		<div class="col-xs-2 col-sm-6 col-md-8 col-lg-10">
 			<div class="pull-right" id="customSocialMediaLinks">
+
 				<a href="https://www.facebook.com"><i class="fa fa-facebook-square"></i><a/>
 				<a href="https://www.twitter.com"><i class="fa fa-twitter-square"></i><a/>
 				<br>
 				<a href="https://instagram.com/"><i class="fa fa-instagram"></i><a/>
 				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i><a/>
+				<br>
+				<a href="mjaff" class="btn btn-default">Mjaffa fuff yttre!</a>
+
 			</div>
 		</div>
 	</div>
