--- a/wp-content/themes/ngTheme-master/partials/views/home.html
+++ b/wp-content/themes/ngTheme-master/partials/views/home.html
@@ -1,5 +1,5 @@
 <!-- main content at the start mode of the app -->
-<section class="container">
+<section class="container-fluid">
 	<div class="row">
 	  <div class="col-sm-6 col-md-4 col-lg-4">
 	    <div class="thumbnail">
