changed placeholder val for search input

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -41,7 +41,7 @@
 	<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default" target="_blank">Tyck till om våran sajt!</a>	
 	<form ng-submit="search();">
 	  <div class="input-group">
-	   <input type="search" class="form-control" id="search" placeholder="Område" ng-model="searchWord">
+	   <input type="search" class="form-control" id="search" placeholder="Stad" ng-model="searchWord">
 	   	<span class="input-group-btn">
 	    	<button class="btn btn-default" type="button" ng-click="search();">Sök</button>
 	   	</span>
