responsive behaviour searchresult

--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -13,13 +13,13 @@
 				<a href="https://instagram.com/"><i class="fa fa-instagram"></i><a/>
 				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i><a/>
 				<br>
-				<a href="mjaff" class="btn btn-default">Mjaffa fuff yttre!</a>
+				
 
 			</div>
 		</div>
 	</div>
 	<!-- navbar from Bootstrap components -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default nav_sellforce">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -38,7 +38,7 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default" target="_blank">Tyck till om våran sajt!</a>	
+	<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default survey_btn" target="_blank">Tyck till om vår sajt!</a>	
 	<form ng-submit="search();">
 	  <div class="input-group">
 	   <input type="search" class="form-control" id="search" placeholder="Stad" ng-model="searchWord">
