--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -1,81 +1,83 @@
 <!-- shows inside of <main> when searchresults table is showed -->
 <section class="container-fluid">
   <div class="row">
-  	<div class="col-sm-12">
-      <div class="col-sm-12 col-md-12 col-lg-12 filterbox panel panel-default">
+  	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 filterbox panel panel-default">
   			<div class="panel-body">
 			    <form role="form" class="form-horizontal">
-			    	<div class="form-group">
+			    	<div class="form-group filt_form_group">
 			    		<div class="row">
-			    			
-			    				
-			    				<div class="col-sm-2">
-					    			<p>Filtrera resultat </p>
-					    		</div>
+		    				
 
-					    		<div class="col-sm-2">
-							    	<input id="apartment" type="checkbox" ng-model="propFilters.type['lägenhet']" value="1">
-						    		<label for="apartment" class="filt_label">Lägenhet </label>
-						    	</div>
+				    		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				    			<ul class="filt_list">
+				    				<li>
+								    	<input id="apartment" type="checkbox" ng-model="propFilters.type['lägenhet']" value="1">
+							    		<label for="apartment" class="filt_label">Lägenhet </label>
+							    	</li>
 
-						    	<div class="col-sm-2">
-						    		<input id="villa" type="checkbox" ng-model="propFilters.type.hus" value="1">
-						    		<label for="villa" class="filt_label">Villa </label>
-						    	</div>
-			    	
-						    	<div class="col-sm-2">
-						    		<input id="farm"  type="checkbox" ng-model="propFilters.type['gård']" value="1">
-						    		<label for="farm" class="filt_label">Gård </label>
-						    	</div>
+							    	<li>
+							    		<input id="villa" type="checkbox" ng-model="propFilters.type.hus" value="1">
+							    		<label for="villa" class="filt_label">Villa </label>
+							    	</li>
+				    	
+							    	<li>
+							    		<input id="farm"  type="checkbox" ng-model="propFilters.type['gård']" value="1">
+							    		<label for="farm" class="filt_label">Gård </label>
+							    	</li>
 
-						    	<div class="col-sm-2">
-						    		<input id="plot" type="checkbox" ng-model="propFilters.type.tomt" value="1">
-						    		<label for="plot" class="filt_label">Tomt </label>
-							    </div>
+							   		<li>
+							    		<input id="plot" type="checkbox" ng-model="propFilters.type.tomt" value="1">
+							    		<label for="plot" class="filt_label">Tomt </label>
+							    	</li>
 
-							    <div class="col-sm-2">
-							    	<button class="btn btn-default pull-right" ng-click="resetFilter()">Nollställ filter</button>
-						   		</div>
+						    	</ul>
+						    </div>
+
+						    
 				    	</div>
-
+				    </div>
+				    <div class="form-group filt_form_group">
 				    	<div class="row">
-					    	<div class="col-sm-4">
-	      					<input placeholder="Ort" class="form-control" type="text" value="" ng-model="citySearch.facts.city">
+					    	<div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+	      					<input placeholder="Alla orter" class="form-control filt_field" type="text" value="" ng-model="citySearch.facts.city">
 	      				</div>
 
-	      				<div class="col-sm-4">
-	      					<input placeholder="Pris från.." class="form-control" type="number" value="" ng-model="propFilters.priceRange[0]">
+	      				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+	      					<input placeholder="Minsta pris" class="form-control filt_field" type="number" value="" ng-model="propFilters.priceRange[0]">
 	      				</div>
 	      		
-	      				<div class="col-sm-4">
-	      					<input placeholder="till" class="form-control" type="number" value="" ng-model="propFilters.priceRange[1]">
+	      				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+	      					<input placeholder="Högsta pris" class="form-control filt_field" type="number" value="" ng-model="propFilters.priceRange[1]">
 	      				</div>
+	      				<div class="col-xs-12 col-sm-2 col-md-3 col-lg-5">
+						    	<button class="btn btn-default pull-right" ng-click="resetFilter()">Återställ</button>
+					   		</div>
 	      			</div>
-
-    				</div>
-					</form>
-				</div>
-
+	      		</div>
+    			</div>
+				</form>
 			</div>
-    </div>
+		</div>
+  </div>
 
     <!-- end filter -->
 
-    <div class="col-sm-10">
+    <div class="col-sm-12">
       <div class="row">
         <div class="col-sm-12 resultRow" ng-repeat="property in properties | filter:citySearch | type: propFilters.type | price: propFilters.priceRange">
-            <div class="thumbnail col-sm-6 col-md-6 col-lg-4">
+          <div class="thumbnail col-sm-6 col-md-6 col-lg-6">
 	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
-      		<div class="col-sm-6 col-md-6 col-lg-4">
-				<p>{{property.base_post.title}}</p>
-			    <p>Pris: {{property.facts.asking_price}} kr</p>
-			    <p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
-			    <p>Yta: {{property.facts.area}} kvadratmeter</p>
-			    <p>Stad: {{property.facts.city}}</p>
-			</div>
-			<div class="col-sm-12 col-md-12 col-lg-4" ng-bind-html="property.base_post.excerpt">
-		    </div>
+      		<div class="col-sm-6 col-md-6 col-lg-6 ">
+						<p class="lead">{{property.base_post.title}}</p>
+				    <p>Pris: {{property.facts.asking_price}} kr</p>
+				    <p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
+				    <p>Yta: {{property.facts.area}} kvadratmeter</p>
+				    <p>Stad: {{property.facts.city}}</p>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6" ng-bind-html="property.base_post.excerpt">
+		    	</div>
         </div>
       </div>
     </div>
