--- a/wp-content/themes/ngTheme-master/partials/views/searchresult.html
+++ b/wp-content/themes/ngTheme-master/partials/views/searchresult.html
@@ -66,17 +66,18 @@
     <div class="col-sm-12">
       <div class="row">
         <div class="col-sm-12 resultRow" ng-repeat="property in properties | filter:citySearch | type: propFilters.type | price: propFilters.priceRange">
-          <div class="thumbnail col-sm-6 col-md-6 col-lg-6">
+          <div class="thumbnail col-sm-6 col-md-6 col-lg-6 obj_thumbnail">
 	      		<img ng-click="showSingleProp(property.base_post.slug);" ng-src="{{property.media[0].source}}" class="hundred_img img-responsive">
       		</div>
-      		<div class="col-sm-6 col-md-6 col-lg-6 ">
+      		<div class="col-sm-6 col-md-6 col-lg-6">
 						<p class="lead">{{property.base_post.title}}</p>
-				    <p>Pris: {{property.facts.asking_price}} kr</p>
-				    <p>Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
-				    <p>Yta: {{property.facts.area}} kvadratmeter</p>
-				    <p>Stad: {{property.facts.city}}</p>
+				    <p class="obj_prop">Pris: {{property.facts.asking_price}} kr</p>
+				    <p class="obj_prop">Driftskostnad: {{property.facts.running_costs}} kr/månad.</p>
+				    <p class="obj_prop">Yta: {{property.facts.area}} kvadratmeter</p>
+				    <p class="obj_prop">Stad: {{property.facts.city}}</p>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-6" ng-bind-html="property.base_post.excerpt">
+
+					<div class="col-sm-12 col-md-6 col-lg-6 obj_desc" ng-bind-html="property.base_post.excerpt">
 		    	</div>
         </div>
       </div>
