--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,21 +1,11 @@
 <!-- header content -->
 <div class="container-fluid" ng-controller="headerController">
 	<div class="logoarea row">
-		<div class="logWrap col-xs-10 col-sm-6 col-md-4 col-lg-2">
+		<div class="logWrap col-xs-11 col-sm-4 col-md-4 col-lg-2">
 		<a href="" ng-click="goTo('/');"><img id="logo" src="/wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
 		</div>
-		<div class="col-xs-2 col-sm-6 col-md-8 col-lg-10">
-			<div class="pull-right" id="customSocialMediaLinks">
-
-				<a href="https://www.facebook.com"><i class="fa fa-facebook-square"></i><a/>
-				<a href="https://www.twitter.com"><i class="fa fa-twitter-square"></i><a/>
-				<br>
-				<a href="https://instagram.com/"><i class="fa fa-instagram"></i><a/>
-				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i><a/>
-				<br>
-				
-
-			</div>
+		<div class="col-xs-1 col-sm-8 col-md-8 col-lg-10">
+			
 		</div>
 	</div>
 	<!-- navbar from Bootstrap components -->
@@ -38,7 +28,20 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default survey_btn" target="_blank">Tyck till om vår sajt!</a>	
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default survey_btn" target="_blank">Tyck till om vår sajt!</a>	
+			<div id="customSocialMediaLinks" class="pull-right">
+						
+				<a href="https://www.facebook.com"><i class="fa fa-facebook-square"></i><a/>
+				<a href="https://www.twitter.com"><i class="fa fa-twitter-square"></i><a/>
+
+				<a href="https://instagram.com/"><i class="fa fa-instagram"></i><a/>
+				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i><a/>		
+			</div>
+		</div>
+	</div>
+
 	<form ng-submit="search();">
 	  <div class="input-group">
 	   <input type="search" class="form-control" id="search" placeholder="Stad" ng-model="searchWord">
