--- a/wp-content/themes/ngTheme-master/style.css
+++ b/wp-content/themes/ngTheme-master/style.css
@@ -6557,12 +6557,21 @@ button.close {
 /* HEADER */
 
 #customSocialMediaLinks {
-  margin-top: 5px;
+  margin-top: -1px;
+  padding: 0 0 0 0;
+  position: relative;
+  top: -2px;
 }
 
 #customSocialMediaLinks a i {
   color: black;
   font-size: 40px;
+}
+
+.socmed_wrap {
+	text-align: right;
+	padding-right: 0;
+	margin-right: 0;
 }
 
 .inline_block {
