--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -1,11 +1,8 @@
 <!-- header content -->
 <div class="container-fluid" ng-controller="headerController">
 	<div class="logoarea row">
-		<div class="logWrap col-xs-11 col-sm-4 col-md-4 col-lg-2">
+		<div class="logWrap col-xs-12 col-sm-4 col-md-4 col-lg-3">
 		<a href="" ng-click="goTo('/');"><img id="logo" src="/wu14RIA1/wp-content/themes/ngTheme-master/partials/img/sellogo.jpg"></a>
-		</div>
-		<div class="col-xs-1 col-sm-8 col-md-8 col-lg-10">
-			
 		</div>
 	</div>
 	<!-- navbar from Bootstrap components -->
@@ -25,22 +22,27 @@
 	    	<!-- begin menuRecurse -->
 		    <ul class="nav navbar-nav" ng-include="partialDir+'views/menuRecurse.html'">
 	      </ul> <!-- end menuRecurse -->
+	      <ul class="nav navbar-nav navbar">
+	   
+	      	<li>
+	      		<a href="https://sv.surveymonkey.com/s/NBGB8BT" target="_blank">Tyck till om vår sajt!</a>
+	      	</li>
+	      </ul>	
+      	<ul class="nav navbar-nav navbar-right customSocialMediaLinks">
+	      	<li>
+	      		<a href="https://www.facebook.com"><i class="fa fa-facebook-square"></i></a>
+
+	      		<a href="https://www.twitter.com"><i class="fa fa-twitter-square"></i></a>
+
+						<a href="https://instagram.com/"><i class="fa fa-instagram"></i></a>
+
+						<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i></a>
+					</li>
+				</ul>	
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<a href="https://sv.surveymonkey.com/s/NBGB8BT" class="btn btn-default survey_btn" target="_blank">Tyck till om vår sajt!</a>	
-			<div id="customSocialMediaLinks" class="pull-right">
-						
-				<a href="https://www.facebook.com"><i class="fa fa-facebook-square"></i><a/>
-				<a href="https://www.twitter.com"><i class="fa fa-twitter-square"></i><a/>
-
-				<a href="https://instagram.com/"><i class="fa fa-instagram"></i><a/>
-				<a href="http://www.reddit.com/"><i class="fa fa-reddit-square"></i><a/>		
-			</div>
-		</div>
-	</div>
+	
 
 	<form ng-submit="search();">
 	  <div class="input-group">
