--- a/wp-content/themes/ngTheme-master/partials/header.html
+++ b/wp-content/themes/ngTheme-master/partials/header.html
@@ -7,7 +7,7 @@
 	</div>
 	<!-- navbar from Bootstrap components -->
 	<nav class="navbar navbar-default nav_sellforce">
-	  <div class="container-fluid">
+	  <div class="container-fluid nav_flu_cont">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" ng-click="collapseNav()" data-target="#bs-example-navbar-collapse-1">
@@ -22,7 +22,7 @@
 	    	<!-- begin menuRecurse -->
 		    <ul class="nav navbar-nav" ng-include="partialDir+'views/menuRecurse.html'">
 	      </ul> <!-- end menuRecurse -->
-	      <ul class="nav navbar-nav navbar">
+	      <ul class="nav navbar-nav">
 	   
 	      	<li>
 	      		<a href="https://sv.surveymonkey.com/s/NBGB8BT" target="_blank">Tyck till om vår sajt!</a>
